--- a/menubreak.html
+++ b/menubreak.html
@@ -64,11 +64,11 @@
                 <div class="mainitem">     <!--بداية المنتج -->
                    <div class="itemsconte foemating">
                        <span  class="nameitems namesmrgn ">برجر لحم كلاسيك</span>
-                       <span class="leftside">15
-                       </span>
+                       <span class="leftside">15</span>
+                       
                        <div style="align-items: center; width: auto; height: auto;">
-                        <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                         font-size: x-small; border-radius: 4px; font-weight: 400;
+                        <SPan  style="margin-left: 15px; background-color: #414142 ; 
+                         font-size: x-small; border-radius: 2px; font-weight: 400;
                           color: white; margin-top: 3px; padding: 2px; align-items: center;"
                            class=" leftside  ">السعرات  : 400</SPan>
                          </div>                                           
@@ -105,8 +105,8 @@
                        <span class="leftside">17
                        </span>
                        <div style="align-items: center; width: auto; height: auto;">
-                        <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                         font-size: x-small; border-radius: 4px; font-weight: 400;
+                        <SPan  style="margin-left: 15PX; background-color: #414142 ; 
+                         font-size: x-small; border-radius: 2px; font-weight: 400;
                           color: white; margin-top: 3px; padding: 2px; align-items: center;"
                            class=" leftside  ">السعرات  : 400</SPan>
                          </div>                                                             
@@ -138,11 +138,11 @@
                 <div class="mainitem">     <!--بداية المنتج -->
                    <div class="itemsconte foemating">
                        <span class="nameitems namesmrgn ">برجر لحم دبل</span>
-                       <span class="leftside">23
-                       </span>
+                       <span class="leftside">23</span>
+                       
                        <div style="align-items: center; width: auto; height: auto;">
-                        <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                         font-size: x-small; border-radius: 4px; font-weight: 400;
+                        <SPan  style="margin-left: 13PX; background-color: #414142 ; 
+                         font-size: x-small; border-radius: 2px; font-weight: 400;
                           color: white; margin-top: 3px; padding: 2px; align-items: center;"
                            class=" leftside  ">السعرات  : 400</SPan>
                          </div>                                                            
@@ -177,8 +177,8 @@
                        <span class="leftside">17
                        </span>
                        <div style="align-items: center; width: auto; height: auto;">
-                        <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                         font-size: x-small; border-radius: 4px; font-weight: 400;
+                        <SPan  style="margin-left: 15PX; background-color: #414142 ; 
+                         font-size: x-small; border-radius: 2px; font-weight: 400;
                           color: white; margin-top: 3px; padding: 2px; align-items: center;"
                            class=" leftside  ">السعرات  : 400</SPan>
                          </div>                                                           
@@ -213,8 +213,8 @@
                                <span class="leftside">15
                                </span>
                                <div style="align-items: center; width: auto; height: auto;">
-                                <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                                 font-size: x-small; border-radius: 4px; font-weight: 400;
+                                <SPan  style="margin-left: 15PX; background-color: #414142 ; 
+                                 font-size: x-small; border-radius: 2px; font-weight: 400;
                                   color: white; margin-top: 3px; padding: 2px; align-items: center;"
                                    class=" leftside  ">السعرات  : 400</SPan>
                                  </div>                                                           
@@ -248,8 +248,8 @@
                                <span class="leftside">17
                                </span>
                                <div style="align-items: center; width: auto; height: auto;">
-                                <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                                 font-size: x-small; border-radius: 4px; font-weight: 400;
+                                <SPan  style="margin-left: 15PX; background-color: #414142 ; 
+                                 font-size: x-small; border-radius: 2px; font-weight: 400;
                                   color: white; margin-top: 3px; padding: 2px; align-items: center;"
                                    class=" leftside  ">السعرات  : 400</SPan>
                                  </div>                                                           
@@ -284,8 +284,8 @@
                        <span class="leftside">20
                        </span>
                        <div style="align-items: center; width: auto; height: auto;">
-                        <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                         font-size: x-small; border-radius: 4px; font-weight: 400;
+                        <SPan  style="margin-left: 13PX; background-color: #414142 ; 
+                         font-size: x-small; border-radius: 2px; font-weight: 400;
                           color: white; margin-top: 3px; padding: 2px; align-items: center;"
                            class=" leftside  ">السعرات  : 400</SPan>
                          </div>                                                           
@@ -320,8 +320,8 @@
                        <span class="leftside">17
                        </span>
                        <div style="align-items: center; width: auto; height: auto;">
-                        <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                         font-size: x-small; border-radius: 4px; font-weight: 400;
+                        <SPan  style="margin-left: 15PX; background-color: #414142 ; 
+                         font-size: x-small; border-radius: 2px; font-weight: 400;
                           color: white; margin-top: 3px; padding: 2px; align-items: center;"
                            class=" leftside  ">السعرات  : 400</SPan>
                          </div>                                                           
@@ -356,8 +356,8 @@
                        <span class="leftside">17
                        </span>
                        <div style="align-items: center; width: auto; height: auto;">
-                        <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                         font-size: x-small; border-radius: 4px; font-weight: 400;
+                        <SPan  style="margin-left: 15PX; background-color: #414142 ; 
+                         font-size: x-small; border-radius: 2px; font-weight: 400;
                           color: white; margin-top: 3px; padding: 2px; align-items: center;"
                            class=" leftside  ">السعرات  : 400</SPan>
                          </div>                                                           
@@ -392,8 +392,8 @@
                        <span class="leftside">17
                        </span>
                        <div style="align-items: center; width: auto; height: auto;">
-                        <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                         font-size: x-small; border-radius: 4px; font-weight: 400;
+                        <SPan  style="margin-left: 15PX; background-color: #414142 ; 
+                         font-size: x-small; border-radius: 2px; font-weight: 400;
                           color: white; margin-top: 3px; padding: 2px; align-items: center;"
                            class=" leftside  ">السعرات  : 400</SPan>
                          </div>                                                           
@@ -428,8 +428,8 @@
                        <span class="leftside">19
                        </span>
                        <div style="align-items: center; width: auto; height: auto;">
-                        <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                         font-size: x-small; border-radius: 4px; font-weight: 400;
+                        <SPan  style="margin-left: 15PX; background-color: #414142 ; 
+                         font-size: x-small; border-radius: 2px; font-weight: 400;
                           color: white; margin-top: 3px; padding: 2px; align-items: center;"
                            class=" leftside  ">السعرات  : 400</SPan>
                          </div>                                                           
@@ -464,8 +464,8 @@
                        <span class="leftside">18
                        </span>
                        <div style="align-items: center; width: auto; height: auto;">
-                        <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                         font-size: x-small; border-radius: 4px; font-weight: 400;
+                        <SPan  style="margin-left: 15PX; background-color: #414142 ; 
+                         font-size: x-small; border-radius: 2px; font-weight: 400;
                           color: white; margin-top: px; padding: 2px; align-items: center; margin-bottom: 20p;"
                            class=" leftside  ">السعرات  : 400</SPan>
                          </div>                                                           
@@ -499,8 +499,8 @@
                    <span class="leftside">18
                    </span>
                    <div style="align-items: center; width: auto; height: auto;">
-                    <SPan  style="margin-left: 25PX; background-color: #414142 ; 
-                     font-size: x-small; border-radius: 4px; font-weight: 400;
+                    <SPan  style="margin-left: 15PX; background-color: #414142 ; 
+                     font-size: x-small; border-radius: 2px; font-weight: 400;
                       color: white; margin-top: px; padding: 2px; align-items: center; margin-bottom: 20p;"
                        class=" leftside  ">السعرات  : 400</SPan>
                      </div>                                                           
